# Final-Sales-Conversion

./: README.md  mlruns.db  pyproject.toml  requirements.txt  stats.json  streamlit_app.py
conf/base/: catalog.yml  parameters_data_preprocessing.yml  parameters_model_training.yml  parameters_monitoring.yml
mlruns/1/000e73966f5243bf9ab908890441396a/artifacts/model/: MLmodel
mlruns/1/04e0d0c5196b4417bbb9d6f1a5641daa/artifacts/model/: MLmodel  model.pkl
mlruns/1/0898ecb3c1a849d8a76f79d81a97b1ac/artifacts/model/: MLmodel
mlruns/1/0eab6008b139487c9f281585364095c1/artifacts/model/: MLmodel
mlruns/1/20c8c57d92ff42d490eaa63e9988cc41/artifacts/model/: MLmodel  model.pkl
mlruns/1/2205f6de8c324098aba34fcd43367043/artifacts/linear_regression_model/: MLmodel
mlruns/1/24c45f6ae0404c2dbd434967b8242890/artifacts/model/: MLmodel
model/: model.pkl
notebooks/: EDA.ipynb  MODEL.ipynb  TEST.ipynb
reports/: data_drift_report.html  model_monitoring_report.html  model_performance_test_report.html  regression_quality_report.html
src/sales_project/: __init__.py  __main__.py  pipeline.py  settings.py
src/sales_project/pipelines/data_preprocessing/: __init__.py  nodes.py  pipeline.py
src/sales_project/pipelines/model_training/: __init__.py  nodes.py  pipeline.py
src/sales_project/pipelines/monitoring/: __init__.py  nodes.py  pipeline.py  reports.py
src/tests/pipelines/data_preprocessing/: test_pipeline.py
src/tests/pipelines/model_training/: test_pipeline.py
src/tests/pipelines/monitoring/: test_pipeline.py
(+60 files in other folders)
